Fix centre alignment of Next button

--- a/src/components/keypad/style.scss
+++ b/src/components/keypad/style.scss
@@ -61,6 +61,6 @@
 [role='button'] {
   display: flex;
   justify-content: center;
-  margin-bottom: var(--typography-spacing-vertical);
+  margin: 0 auto var(--typography-spacing-vertical) auto;
   width: 10rem;
 }
